--- a/LogicPro/CMakeLists.txt
+++ b/LogicPro/CMakeLists.txt
@@ -3,5 +3,5 @@ project(LogicPro)
 
 set(CMAKE_CXX_STANDARD 14)
 
-#add_executable(LogicPro DesMain.cpp )
-add_executable(LogicPro testgraph.cpp)
+add_executable(LogicPro DesMain.cpp )
+#add_executable(LogicPro testgraph.cpp )
