--- a/LogicPro/CMakeLists.txt
+++ b/LogicPro/CMakeLists.txt
@@ -3,5 +3,6 @@ project(LogicPro)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(LogicPro DesMain.cpp )
+#add_executable(LogicPro DesMain.cpp )
 #add_executable(LogicPro testgraph.cpp )
+add_executable(LogicPro des.h des.c run_des.c testgraph.cpp)
