--- a/LogicPro/CMakeLists.txt
+++ b/LogicPro/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 14)
 
 #add_executable(LogicPro DesMain.cpp )
 #add_executable(LogicPro testgraph.cpp )
-add_executable(LogicPro desSample.cpp vector_sum.c)
+add_executable(LogicPro desSample.cpp vector_sum.c CDFG/VectorXor.cpp)
